add section emma

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>conflicts</title>
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolore,
+                 nostrum labore eos voluptates aperiam eligendi error accusamus nisi
+                  quam neque quae, 
+                odio perferendis tempore asperiores quo ab ratione doloremque!</p>
+        </div>
+    </section>
 </body>
 </html>
