--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>conflicts</title>
 </head>
 <body>
+    <section>
+        <div>
+            <h1>about us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam aliquam placeat totam eveniet quas sit optio odit, 
+                eum repellat eius illo illum neque quis,
+                 alias eligendi beatae id iste quos.</p>
+        </div>
+    </section>
     
 </body>
 </html>
