--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <section>
+            <h1>Welcome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolore,
+                 nostrum labore eos voluptates aperiam eligendi error accusamus nisi
+                  quam neque quae, 
+                odio perferendis tempore asperiores quo ab ratione doloremque!</p>
+        </div>
+    </section>
+    <section>
         <div>
 
             <h1>about us</h1>
@@ -16,14 +24,6 @@
         </div>
     </section>
     
-
-            <h1>Welcome</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci dolore,
-                 nostrum labore eos voluptates aperiam eligendi error accusamus nisi
-                  quam neque quae, 
-                odio perferendis tempore asperiores quo ab ratione doloremque!</p>
-        </div>
-    </section>
 
 </body>
 </html>
